# aiogram_template

./: .dockerignore  .env.dist  .gitignore  Dockerfile  LICENSE  README.md  aiogram-template.system  alembic.ini  config.dist.toml  docker-compose.dist.yml  docker-compose.yml  pyproject.toml  ruff.toml
bot/: factory.py  runners.py  settings.py
bot/services/database/: pool.py
migrations/: env.py
scripts/: docker-entrypoint.sh
src/aiogram_template/: __main__.py  config.py  runner.py  runners.py  settings.py
src/aiogram_template/data/database/: uow.py
src/aiogram_template/data/database/gateways/: __init__.py  base.py  user.py
src/aiogram_template/data/database/models/: base.py  user.py
src/aiogram_template/di/: __init__.py  bot.py  config.py  context.py  database.py  dispatcher.py  fluent.py  gateway.py  gateways.py  inject.py  jinja.py  redis.py
src/aiogram_template/di/providers/: __init__.py  bot.py  context.py  database.py  dispatcher.py  repository.py
src/aiogram_template/enums/: __init__.py  locales.py
src/aiogram_template/factories/: __init__.py  bot.py  dispatcher.py  signal_handlers.py
src/aiogram_template/factory/: __init__.py  bot.py  dispatcher.py  fluent.py
src/aiogram_template/handlers/: __init__.py  bot.py
src/aiogram_template/middlewares/outer/: __init__.py  database.py  i18n.py  user.py
src/aiogram_template/middlewares/request/: __init__.py  request.py
src/aiogram_template/services/database/: __init__.py  pool.py
src/aiogram_template/services/database/gateways/: base.py  user.py
src/aiogram_template/services/database/migrations/: env.py
src/aiogram_template/services/database/models/: __init__.py  base.py  user.py
src/aiogram_template/services/database/repositories/: __init__.py  base.py  main.py  user.py
src/aiogram_template/telegram/handlers/: __init__.py
src/aiogram_template/telegram/handlers/admin/: __init__.py
src/aiogram_template/telegram/middlewares/inner/: __init__.py  user.py
src/aiogram_template/telegram/middlewares/outer/: __init__.py  user.py
src/aiogram_template/telegram/middlewares/request/: __init__.py
src/aiogram_template/telegram/widgets/: __init__.py  i18n.py
src/aiogram_template/utils/: mjson.py  msgspec_json.py
src/aiogram_template/utils/widgets/: __init__.py  i18n.py
src/bot/: factory.py  runners.py  settings.py
systemd/: aiogram-template.system
