[project]
name = "aiogram-template"
version = "1.0.0"
description = "aiogram_template"
license = "MIT"
authors = [{author = "Angel", email = "145038102+KurosawaAngel@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adaptix>=3.0.0b8",
    "aiogram-dialog>=2.2.0",
    "aiogram-i18n",
    "aiogram>=3.13.1",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "dishka>=1.3.0",
    "jinja2>=3.1.4",
    "redis>=5.1.1",
    "sqlalchemy>=2.0.35",
]

[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.9",
]

[tool.uv.sources]
aiogram-i18n = { git = "https://github.com/aiogram/i18n.git", rev = "cd35798806e4770c6470da1bd05468b94c111f89" }