[project]
name = "aiogram-template"
version = "0.1.0"
description = "aiogram_template"
license = "MIT"
authors = [{author = "Angel", email = "145038102+KurosawaAngel@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b9",
    "aiogram-dialog>=2.3",
    "aiogram-i18n",
    "aiogram>=3.17",
    "alembic>=1.14",
    "dishka>=1.4",
    "jinja2>=3.1",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "psycopg[binary,pool]>=3.2",
]

[project.scripts]
aiogram_template = "aiogram_template.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.9",
]

[tool.uv.sources]
aiogram-i18n = { git = "https://github.com/aiogram/i18n.git", rev = "cd35798806e4770c6470da1bd05468b94c111f89" }

[tool.ruff]
src = ["src"]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]
