[project]
name = "aiogram-template"
version = "1.0.0"
description = "aiogram_template"
license = "MIT"
authors = [{author = "Angel", email = "145038102+KurosawaAngel@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adaptix>=3.0.0b9",
    "aiogram-dialog>=2.3",
    "aiogram-i18n",
    "aiogram>=3.17",
    "alembic>=1.14",
    "dishka>=1.4",
    "jinja2>=3.1",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "psycopg[binary,pool]>=3.2",
]

[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.9",
]

[tool.uv.sources]
aiogram-i18n = { git = "https://github.com/aiogram/i18n.git", rev = "cd35798806e4770c6470da1bd05468b94c111f89" }
